front page overflow fix

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -71,7 +71,7 @@ position: relative;
   background-color: #ffff1b;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   .latest_container {
     max-width: 1400px;
   }
@@ -96,9 +96,22 @@ position: relative;
     gap: 1rem;
     width: 100%;
     padding: 0 2rem 2rem 2rem;
+    overflow-x: scroll;
 
   
-  }  
+  } 
+  .paint_name {
+    color: #1717D2;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  
+  
+  
+@media (min-width: 1024px) {
   .image {
     overflow: hidden;
     position: relative;
@@ -122,7 +135,6 @@ position: relative;
     bottom: 0;
     animation: moveTitle 0.2s ease-in-out;
   }
-  
   @keyframes moveTitle {
     from {
       bottom: -4rem;
@@ -131,6 +143,9 @@ position: relative;
       bottom: 0;
     }
   }
+}
+
+
 }
 /*
 .image_container {
